# ai-clinical-protocol-reviewer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  versioning.yml
src/: app.py  config.py  models.py  pipeline.py  smoke_test.py
src/adapters/: embeddings.py  llm.py  observability.py  qdrant.py
src/api/: server.py
src/core/: config.py  constants.py  embeddings.py  llm.py  prompts.py  text.py  text_utils.py  vectorstore.py
src/models/: __init__.py  schemas.py
src/schemas/: ai_types.py  api_types.py
src/services/: agent_service.py  ai_agent.py  extraction_agent.py  ingestion.py  ingestion_service.py  prompts.py  rank.py  ranking_service.py  rerank.py
src/tests/: agent_test.py  query_gen_test.py  search_test.py  smoke_test.py  title_extration.py
src/ui/: agent_view.py  ingest_view.py  layout.py  search_view.py  sidebar_comp.py  types.py
src/ui/components/: guards.py  result_card.py  trace_view.py
src/ui/views/: agent_view.py  ingest_view.py  search_view.py
