[project]
name = "cluepoint-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "docling>=2.102.1",
    "fastembed>=0.8.0",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "ollama>=0.6.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]



[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]  # errors, pyflakes, isort, bugbear, pyupgrade, simplify, comprehensions
ignore = ["E501"]  # let the formatter handle line length

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
