[project]
name = "cluepoint"
version = "1.0.0"
description = "AI-driven tooling to improve clinical trial data quality and review."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "docling>=2.102.1",
    "fastembed>=0.8.0",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]



[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]  # errors, pyflakes, isort, bugbear, pyupgrade, simplify, comprehensions
ignore = ["E501"]  # let the formatter handle line length

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"  # tighten to "standard"/"strict" later

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
